cabal-version:      2.4
name:               cabal-script
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             ksqsf
maintainer:         i@ksqsf.moe

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable cabal-script
    main-is:          Main.hs
    ghc-options:      -threaded

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    SHA >= 1.6.4.4,
                      base ^>=4.14.1.0,
                      bytestring >= 0.10.12.0,
                      directory >= 1.3.6.2,
                      filepath >= 1.4.2.1,
                      mtl >= 2.2.2,
                      process >= 1.6.9.0,
                      sqlite-simple >= 0.4.18.0,
                      time >= 1.9.3,
                      transformers >= 0.5.6.2,
                      utf8-string >= 1.0.2
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: OverloadedStrings, LambdaCase
