cabal-version:      2.4
name:               cabal-script
version:            0.1.0.0

synopsis: Compile and run a single Haskell file
-- description:
bug-reports: https://github.com/ksqsf/cabal-script

-- license:
author:             ksqsf
maintainer:         i@ksqsf.moe

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable cabal-script
    main-is:          Main.hs
    ghc-options:      -threaded

    -- other-modules:

    build-depends:    SHA >= 1.6.4.4 && < 1.7,
                      base >=4.14.1.0 && < 5,
                      bytestring >= 0.10.12.0 && < 0.11,
                      directory >= 1.3.6.2 && < 1.4,
                      filepath >= 1.4.2.1 && < 1.5,
                      mtl >= 2.2.2 && < 2.3,
                      process >= 1.6.13 && < 1.7,
                      sqlite-simple >= 0.4.18 && < 0.5,
                      time >= 1.9.3 && < 1.10,
                      transformers >= 0.5.6.2 && < 0.6,
                      utf8-string >= 1.0.2 && < 1.1
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: OverloadedStrings, LambdaCase
